modified Result sheet for SEO